--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -87,7 +87,7 @@
 
     <p><strong>*</strong>{{' '}}<span translate="common.required-fields"></span></p>
 
-    <div class="row d-flex justify-content-between">
+    <div class="row d-flex justify-content-between mobile-add-margin-bottom">
       <div class="col-md-5 order-1 col-12">
         <button type="submit" class="block-button btn btn-success" translate="reservation-page.continue" [disabled]="expired"></button>
       </div>
