--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -99,7 +99,7 @@
     <div class="row d-flex justify-content-between mobile-add-margin-bottom" *ngIf="!submitting">
       <div class="col-md-5 order-1 col-12">
         <button *ngIf="reservationInfo.orderSummary.free" type="submit" class="block-button btn btn-success" translate="reservation-page.continue" [disabled]="expired"></button>
-        <button *ngIf="!reservationInfo.orderSummary.free" type="submit" class="block-button btn btn-success" [disabled]="expired || !selectedPaymentProvider">
+        <button *ngIf="!reservationInfo.orderSummary.free" type="submit" class="block-button btn btn-success" [disabled]="expired || !selectedPaymentProvider || !acceptedPrivacyAndTermAndConditions">
             {{'reservation-page.pay'|translate}} {{reservationInfo.orderSummary.totalPrice}} {{event.currency}}
         </button>
       </div>
