--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -35,15 +35,15 @@
       <form [formGroup]="waitingListForm" (submit)="submitWaitingListRequest(event.shortName, waitingListForm.value)">
           <div class="form-group">
             <label for="firstName" translate="common.first-name"></label>
-            <input type="text" id="firstName" class="form-control" name="firstName" formControlName="firstName" required="required" aria-required="true" maxlength="255" appInvalidFeedback>
+            <input type="text" id="firstName" class="form-control" name="firstName" formControlName="firstName" required="required" aria-required="true" [attr.maxlength]="255" appInvalidFeedback>
           </div>
           <div class="form-group">
             <label for="lastName" translate="common.last-name"></label>
-            <input type="text" id="lastName" class="form-control" name="lastName" formControlName="lastName" required="required" aria-required="true" maxlength="255" appInvalidFeedback>
+            <input type="text" id="lastName" class="form-control" name="lastName" formControlName="lastName" required="required" aria-required="true" [attr.maxlength]="255" appInvalidFeedback>
           </div>
           <div class="form-group">
             <label for="email" translate="common.email"></label>
-            <input type="email" id="email" class="form-control" name="email" formControlName="email" required="required" aria-required="true" maxlength="255" appInvalidFeedback>
+            <input type="email" id="email" class="form-control" name="email" formControlName="email" required="required" aria-required="true" [attr.maxlength]="255" appInvalidFeedback>
           </div>
           <div class="form-group" *ngIf="ticketCategoriesForWaitingList && ticketCategoriesForWaitingList.length > 1">
             <label for="selectedCategory" translate="reservation-page.category"></label>
