--- a/src/app/payment/onsite-payment-proxy/onsite-payment-proxy.component.html
+++ b/src/app/payment/onsite-payment-proxy/onsite-payment-proxy.component.html
@@ -2,4 +2,7 @@
     <div class="col-12">
         <div class="text-muted" translate="reservation-page.on-site.description"></div>
     </div>
+    <div class="col-12 wMarginTop" *ngIf="parameters && parameters.captchaRequestedForOffline && parameters.recaptchaApiKey">
+        <app-recaptcha [apiKey]="parameters.recaptchaApiKey" (recaptchaResponse)="handleRecaptchaResponse($event)"></app-recaptcha>
+    </div>
 </div>
