--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="reservationInfo && event">
 
-  <app-stepper [currentStep]="3" [free]="event.free"></app-stepper>
+  <app-stepper [currentStep]="3" [free]="reservationInfo.orderSummary.free"></app-stepper>
 
   <app-countdown [validity]="reservationInfo.validity" (onExpired)="handleExpired($event)"></app-countdown>
 
@@ -18,16 +18,16 @@
 
       <div *ngIf="paymentMethodsCount() > 1">
           <div class="btn-group btn-group-toggle payment-method-selector wMarginBottom">
-            <label  class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'CREDIT_CARD'}" *ngIf="event.activePaymentMethods['CREDIT_CARD']">
+            <label class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'CREDIT_CARD'}" *ngIf="event.activePaymentMethods['CREDIT_CARD']">
               <input type="radio" formControlName="selectedPaymentMethod" [value]="'CREDIT_CARD'"><fa-icon [icon]="['fas', 'credit-card']"></fa-icon> {{'reservation-page.credit-card'|translate}}
             </label>
             <label class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'PAYPAL'}" *ngIf="event.activePaymentMethods['PAYPAL']">
               <input type="radio" formControlName="selectedPaymentMethod" [value]="'PAYPAL'"><fa-icon [icon]="['fab', 'paypal']"></fa-icon> {{'reservation-page.paypal'|translate}}
             </label>
-            <label  class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'BANK_TRANSFER'}" *ngIf="event.activePaymentMethods['BANK_TRANSFER']">
+            <label class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'BANK_TRANSFER'}" *ngIf="event.activePaymentMethods['BANK_TRANSFER']">
               <input type="radio" formControlName="selectedPaymentMethod" [value]="'BANK_TRANSFER'"><fa-icon [icon]="['fas', 'exchange-alt']"></fa-icon> {{'reservation-page.offline'|translate}}
             </label>
-            <label  class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'ON_SITE'}" *ngIf="event.activePaymentMethods['ON_SITE']">
+            <label class="btn btn-outline-dark" [ngClass]="{'active': overviewForm.value.selectedPaymentMethod === 'ON_SITE'}" *ngIf="event.activePaymentMethods['ON_SITE']">
               <input type="radio" formControlName="selectedPaymentMethod" [value]="'ON_SITE'"><fa-icon [icon]="['fas', 'money-bill']"  size="sm"></fa-icon> {{'reservation-page.on-site'|translate}}
             </label>
           </div>
@@ -54,11 +54,14 @@
             [proxy]="overviewForm.value.paymentMethod" 
             [method]="overviewForm.value.selectedPaymentMethod" 
             [parameters]="event.activePaymentMethods[overviewForm.value.selectedPaymentMethod].parameters"
+            [overviewForm]="overviewForm"
             (paymentProvider)="registerCurrentPaymentProvider($event)">
           </app-offline-payment-proxy>
           <app-onsite-payment-proxy 
             [proxy]="overviewForm.value.paymentMethod" 
-            [method]="overviewForm.value.selectedPaymentMethod" 
+            [method]="overviewForm.value.selectedPaymentMethod"
+            [parameters]="event.activePaymentMethods[overviewForm.value.selectedPaymentMethod].parameters"
+            [overviewForm]="overviewForm"
             (paymentProvider)="registerCurrentPaymentProvider($event)">
           </app-onsite-payment-proxy>
           <app-stripe-payment-proxy 
@@ -76,6 +79,10 @@
             (paymentProvider)="registerCurrentPaymentProvider($event)">
           </app-paypal-payment-proxy>
       </div>
+    </div>
+
+    <div *ngIf="reservationInfo.orderSummary.free && event.captchaConfiguration.captchaForOfflinePaymentAndFree" class="wMarginTop wMarginBottom">
+      <app-recaptcha [apiKey]="event.captchaConfiguration.recaptchaApiKey" (recaptchaResponse)="handleRecaptchaResponse($event)"></app-recaptcha>
     </div>
 
     <div>
